# TrabalhoBaseDefense

./: .gitignore  CMakeLists.txt  README.md  TrabalhoBaseDefense  main.cpp
.github/workflows/: action.yml
Classes/: Base.cpp  Base.hpp  GameEntity.hpp  Heroi.cpp  Heroi.hpp  Inimigo.cpp  Inimigo.hpp  Mapa.cpp  Mapa.hpp  Projetil.cpp  Projetil.hpp  Variables.cpp  Variables.hpp
TrabalhoBaseDefense/: TrabalhoBaseDefense.cpp
Utils/: DrawUtils.cpp  DrawUtils.hpp  VectorUtils.cpp  VectorUtils.hpp
src/TrabalhoBaseDefense/: TrabalhoBaseDefense.cpp
src/TrabalhoBaseDefense/Game/: Game.cpp  Game.h
src/TrabalhoBaseDefense/Game/Colisoes/: Colisoes.cpp  Colisoes.h
src/TrabalhoBaseDefense/Game/GameEntities/: GameEntity.h
src/TrabalhoBaseDefense/Game/GameEntities/Actions/Shooting/: EnemyShooting.cpp  EnemyShooting.h  HeroShooting.cpp  HeroShooting.h
src/TrabalhoBaseDefense/Game/GameEntities/Actions/Spawning/: DropavelSpawn.cpp  DropavelSpawn.h  EnemySpawn.cpp  EnemySpawn.hpp
src/TrabalhoBaseDefense/Game/GameEntities/impl/: Base.cpp  Base.hpp  Dropavel.cpp  Dropavel.h  Heroi.cpp  Heroi.hpp  Inimigo.cpp  Inimigo.h  Inimigo.hpp  Projetil.cpp  Projetil.h  Projetil.hpp
src/TrabalhoBaseDefense/Game/GameEntities/impl/Dropaveis/: DropavelContext.hpp  DropavelMunicao.cpp  DropavelMunicao.h  DropavelMunicaoStrategy.h  DropavelVidaBase.cpp  DropavelVidaBase.h  DropavelVidaBaseStrategy.h  DropavelVidaHeroi.cpp  DropavelVidaHeroi.h  DropavelVidaHeroiStrategy.h  DropavelVidaHeroiStrategy.hpp  IDropavelStrategy.h
src/TrabalhoBaseDefense/Game/GameEntities/impl/Inimigos/: InimigoBoss.cpp  InimigoBoss.h  InimigoComum.cpp  InimigoComum.h  InimigoFortificado.cpp  InimigoFortificado.h  InimigoRapido.cpp  InimigoRapido.h
src/TrabalhoBaseDefense/Game/GameUtils/: GameEnemyUtils.cpp  GameEnemyUtils.h
src/TrabalhoBaseDefense/Game/Telas/: TelaGameOver.cpp  TelaGameOver.h  TelaMenu.cpp  TelaMenu.h  TextoJogo.cpp  TextoJogo.h
src/TrabalhoBaseDefense/Game/Variables/: EnemyVariables.hpp  HeroVariables.h  Variables.h  WindowConstants.h
src/TrabalhoBaseDefense/Logger/: LogLevel.h  Logger.cpp  Logger.hpp
src/TrabalhoBaseDefense/Util/: DrawUtils.cpp  DrawUtils.hpp  FileUtils.cpp  FileUtils.h  VectorUtils.cpp  VectorUtils.hpp
